--- a/app/views/hyrax/file_sets/media_display/_default.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_default.html.erb
@@ -1,5 +1,5 @@
 <% if file_set.use_glyphicon? %>
-  <% if file_set.allow_download? %>
+  <% if @entity_policy.download? %>
     <%= link_to hyrax.download_path(file_set), target: "_new", title: file_set.download_button_label, class: 'glyphicon-download-link' do %>
       <span class="<%= file_set.glyphicon_type %> asset-page-glyphicon"
             aria-hidden="true"
@@ -14,7 +14,7 @@
     </span>
   <% end %>
 <% else %>
-  <% if file_set.allow_download? %>
+  <% if @entity_policy.download? %>
     <%= link_to hyrax.download_path(file_set), target: "_new", title: file_set.download_button_label do %>
       <%= image_tag thumbnail_url(file_set),
                     class: "img-responsive asset-page-image",
