--- a/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_leaflet_image.html.erb
@@ -1,5 +1,5 @@
 <% riiif_url = "/image-service/#{file_set.id}#{file_set.browser_cache_breaker}/info.json" %>
-<div id="image" style="height:100%;"></div>
+<div id="image" style="height:100%;" class="no-context-menu-or-drag"></div>
 <script>
     var map, layer, timer;
 
