set secure flag on cookies

--- a/app/assets/javascripts/application/cookie_alert.js.erb
+++ b/app/assets/javascripts/application/cookie_alert.js.erb
@@ -1,6 +1,6 @@
 $(document).on('turbolinks:load', function() {
   // display an alert if the user's browser doesn't accept cookies
-  Cookies.set('browser_accepts_cookies', 'yes', { expires: 365 });
+  Cookies.set('browser_accepts_cookies', 'yes', { expires: 365<%= ', secure: true' if Rails.env == 'production' %> });
   var accepts_cookies = Cookies.get('browser_accepts_cookies');
   if (accepts_cookies !== 'yes') {
     $('#cookies-required-alert').show();
