HELIO-3624 - fix aria-label typo

--- a/app/views/catalog/_facets.html.erb
+++ b/app/views/catalog/_facets.html.erb
@@ -35,7 +35,7 @@
                   <% if params["user_access"].nil? %>
                     <input type="radio" aria-label="View all content" name="user_access" checked> All content
                   <% else %>
-                    <input type="radio" aria-lable="View all content" name="user_access"> All content
+                    <input type="radio" aria-label="View all content" name="user_access"> All content
                   <% end %>
                 </span>
               </a>
