HELIO-3624 - adjust facet padding on all collections to align with legend

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -486,6 +486,10 @@ footer.press {
     margin-top: 0px;
   }
 
+  #facet-panel-collapse {
+    padding-left: 0;
+  }
+
   .access-legend {
     padding-right: 15px;
   }
