--- a/app/views/catalog/_view_type_group.html.erb
+++ b/app/views/catalog/_view_type_group.html.erb
@@ -1,9 +1,13 @@
 <% if show_sort_and_per_page? && has_alternative_views? %>
   <div class="view-type btn-group">
     <span class="sr-only"><%= t('blacklight.search.view_title') %></span>
-    <div class="view-type-group btn-group">
+    <div class="view-type-group btn-group" role="tablist">
       <% document_index_views.each do |view, _config| %>
-        <%= link_to url_for(search_state.to_h.merge(view: view)), title: view_label(view), class: "btn btn-default view-type-#{ view.to_s.parameterize } #{'active' if document_index_view_type == view}" do %>
+        <%= link_to url_for(search_state.to_h.merge(view: view)),
+                    title: view_label(view),
+                    class: "btn btn-default view-type-#{ view.to_s.parameterize } #{'active' if document_index_view_type == view}",
+                    role: 'tab',
+                    'aria-selected': document_index_view_type == view do %>
           <%= render_view_type_group_icon view %>
           <span class="caption"><%= view_label(view) %></span>
         <% end %>
